@@ -55,6 +55,18 @@
 					description="MOD_LANGUAGES_FIELD_FOOTER_DESC" />
 
 				<field
+					name="dropdown"
+					type="radio"
+					default="0"
+					label="MOD_LANGUAGES_FIELD_DROPDOWN_LABEL"
+					description="MOD_LANGUAGES_FIELD_DROPDOWN_DESC" >
+					<option value="0">JNO</option>
+					<option value="1">JYES</option>
+				</field>
+				<field name="spacer1" type="spacer" class="text"
+					label="MOD_LANGUAGES_SPACERDROP_LABEL"
+				/>
+				<field
 					name="image"
 					type="radio"
 					default="1"
@@ -78,6 +90,18 @@
 					default="1"
 					label="MOD_LANGUAGES_FIELD_ACTIVE_LABEL"
 					description="MOD_LANGUAGES_FIELD_ACTIVE_DESC" >
+					<option value="0">JNO</option>
+					<option value="1">JYES</option>
+				</field>
+				<field name="spacer2" type="spacer" class="text"
+					label="MOD_LANGUAGES_SPACERNAME_LABEL"
+				/>
+				<field
+					name="full_name"
+					type="radio"
+					default="1"
+					label="MOD_LANGUAGES_FIELD_FULL_NAME_LABEL"
+					description="MOD_LANGUAGES_FIELD_FULL_NAME_DESC" >
 					<option value="0">JNO</option>
 					<option value="1">JYES</option>
 				</field>
