@@ -1,4 +1,4 @@
-; $Id: xx-XX.mod_languages.ini 17070 2010-05-15 05:42:38Z infograf768 $
+; $Id: en-GB.mod_languages.ini 20348 2011-01-18 21:52:44Z infograf768 $
 ; Joomla! Project
 ; Copyright (C) 2005 - 2011 Open Source Matters. All rights reserved.
 ; License GNU General Public License version 2 or later; see LICENSE.txt, see LICENSE.php
@@ -7,16 +7,20 @@
 MOD_LANGUAGES="Language Switcher"
 MOD_LANGUAGES_FIELD_ACTIVE_DESC="Display or not the active language. If displayed, the class 'lang-active' will be added to the element."
 MOD_LANGUAGES_FIELD_ACTIVE_LABEL="Active Language"
-MOD_LANGUAGES_FIELD_DEFAULT_DESC="Include 'Default' language in the list for testing purposes"
-MOD_LANGUAGES_FIELD_DEFAULT_LABEL="Include 'Default' language"
+MOD_LANGUAGES_FIELD_DROPDOWN_DESC="If set to 'Yes', the display parameters below will be ignored. The content languages native names will display in a dropdown."
+MOD_LANGUAGES_FIELD_DROPDOWN_LABEL="Use Dropdown"
 MOD_LANGUAGES_FIELD_FOOTER_DESC="This is the text or HTML that is displayed below the language switcher"
 MOD_LANGUAGES_FIELD_FOOTER_LABEL="Post-text"
+MOD_LANGUAGES_FIELD_FULL_NAME_DESC="If set to 'Yes' and image flags set to 'No', full content languages native names are displayed. If set to 'No', upper case abbreviations from the content language sef are used. Example: EN for English, FR for French."
+MOD_LANGUAGES_FIELD_FULL_NAME_LABEL="Languages Full Names"
 MOD_LANGUAGES_FIELD_HEADER_DESC="This is the text or HTML that is displayed above the language switcher"
 MOD_LANGUAGES_FIELD_HEADER_LABEL="Pre-text"
 MOD_LANGUAGES_FIELD_INLINE_DESC="Default is set to 'Yes', i.e. to horizontal display."
 MOD_LANGUAGES_FIELD_INLINE_LABEL="Horizontal Display"
-MOD_LANGUAGES_FIELD_MODULE_LAYOUT_DESC="Use a different layout from the supplied module or overrides in the default template. 'Default' displays language flags."
-MOD_LANGUAGES_FIELD_USEIMAGE_DESC="Use image flags description"
-MOD_LANGUAGES_FIELD_USEIMAGE_LABEL="Use image flags"
+MOD_LANGUAGES_FIELD_MODULE_LAYOUT_DESC="Use a different layout from the supplied module or overrides in the default template."
+MOD_LANGUAGES_FIELD_USEIMAGE_DESC="If set to 'Yes', will display language choice as image flags. Otherwise will use the content language native names."
+MOD_LANGUAGES_FIELD_USEIMAGE_LABEL="Use Image Flags"
 MOD_LANGUAGES_OPTION_DEFAULT_LANGUAGE="Default"
-MOD_LANGUAGES_XML_DESCRIPTION="This module displays a list of available Content Languages (as defined and published in Language Manager Content tab) for switching bet
+MOD_LANGUAGES_SPACERDROP_LABEL="<u>If Use Dropdown is set to 'Yes', the display options below will be ignored</u>" 
+MOD_LANGUAGES_SPACERNAME_LABEL="<u>If Use Image Flags is set to 'Yes', the display options below will be ignored</u>"
+MOD_LANGUAGES_XML_DESCRIPTION="This module displays a list of available Content Languages (as defined and published in Language Manager Content tab) for switching between them when one wants to use Joomla! as a multilanguage site. <br />--The plugin 'System - Language Filter' has to be published.--<br /> When switching languages, the module redirects to the Home page defined for the chosen language. Thereafter, the navigation will be the one defined for that language.<br />If the plugin <strong>'System - Language Filter'</strong> is unpublished, this may have unwanted results.<br /><strong>Method:</strong><br />1. Open Language Manager Content tab and make sure the Languages you want to use in contents are published and have a Language Code for the URL as well as prefix for the image used in the module display.<br />2. Create a Home page by assigning a language to a menu item and defining it as Default Home page for each published content language. <br />  3. Thereafter, you can assign a language to any Article, Category, Module, Newsfeed, Weblinks in Joomla.<br /> 4. Make sure the module and the plugin are published."
