@@ -27,6 +27,9 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
+23-Apr-2011 Jean-Marie Simonet
+ #$ [#25724] *Improving the langswitcher module, correcting some ini strings
+
 22-Apr-2011 Jean-Marie Simonet
  # [#25722] *Displaying status of Content languages Default Home page in Manager.
 
